Fixed navbar spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .App {
     background-color: #252525;
     color: rgb(192, 220, 245);
